# kintore

dynamic_prog/python/: pyproject.toml
dynamic_prog/python/all_construct/: all_construct.py  test_all_construct.py
dynamic_prog/python/best_sum/: best_sum.py  test_best_sum.py
dynamic_prog/python/can_construct/: can_construct.py  test_can_construct.py
dynamic_prog/python/can_sum/: can_sum.py  test_can_sum.py
dynamic_prog/python/count_construct/: count_construct.py  test_count_construct.py
dynamic_prog/python/fibonacci/: fibonacci.py  test_fibonacci.py
dynamic_prog/python/grid_travel/: grid_travel.py  test_grid_travel.py
dynamic_prog/python/how_sum/: how_sum.py  test_how_sum.py
exercism/: README.md
exercism/go/cars-assemble/: cars_assemble.go
exercism/go/lasagna/: lasagna.go
exercism/go/party-robot/: party_robot.go
leetcode/python/: pyproject.toml
leetcode/python/0001-two-sum/: test_two_sum.py  two_sum.py
leetcode/python/0002-add-two-numbers/: add_two_numbers.py  test_add_two_numbers.py
leetcode/python/0005-longest-palindromic-substring/: longest_palindromic_substring.py  test_longest_palindromic_substring.py
leetcode/python/0009-palindrome-number/: palindrome_number.py  test_palindrome_number.py
leetcode/python/0013-roman-to-integer/: roman.py  test_roman.py
leetcode/python/0014-longest-common-prefix/: lcp.py  test_lcp.py
leetcode/python/0034-find-first-and-last-position-of-element-in-sorted-array/: find_sorted.py  test_find_sorted.py
leetcode/python/0242-valid-anagram/: test_valid_anagram.py  valid_anagram.py
(+120 files in other folders)
