[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Shi Han NG <shihanng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pyright = "^1.1.271"
mypy = "^0.971"
pytest = "^7.1.3"

[tool.isort]
profile = "black"
